--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -2,6 +2,7 @@
   --uni-icons-fa-brands-size: 44px;
   --uni-icons-fa-regular-size: 44px;
   --uni-icons-fa-solid-size: 44px;
+  --uni-icon-mat-size: 44px;
   --uni-icons-mat-filled-size: 44px;
   --uni-icons-mat-outlined-size: 44px;
   --uni-icons-mat-round-size: 44px;
