--- a/src/components/mat/common/styles/icons-mat-common.css
+++ b/src/components/mat/common/styles/icons-mat-common.css
@@ -1,6 +1,15 @@
+.uni-icon-mat-size {
+  width: 24px;  /* Preferred icon size */
+  width: var(--uni-icon-mat-size, 24px);
+  height: 24px;  /* Preferred icon size */
+  height: var(--uni-icon-mat-size, 24px);
+}
+
 .uni-color-default {
   color: #000;  /* Preferred color */
   color: var(--uni-color-default, #000);
+  fill: #000;  /* Preferred color */
+  fill: var(--uni-color-default, #000);
 }
 
 .uni-color-default-fix {
@@ -11,6 +20,8 @@
 .uni-color-primary {
   color: #3f51b5;  /* Preferred color */
   color: var(--uni-color-primary, #3f51b5);
+  fill: #3f51b5;  /* Preferred color */
+  fill: var(--uni-color-primary, #3f51b5);
 }
 
 .uni-color-primary-fix {
@@ -21,6 +32,8 @@
 .uni-color-success {
   color: #018786;  /* Preferred color */
   color: var(--uni-color-success, #018786);
+  fill: #018786;  /* Preferred color */
+  fill: var(--uni-color-success, #018786);
 }
 
 .uni-color-success-fix {
@@ -31,6 +44,8 @@
 .uni-color-accent {
   color: #ff4081;  /* Preferred color */
   color: var(--uni-color-accent, #ff4081);
+  fill: #ff4081;  /* Preferred color */
+  fill: var(--uni-color-accent, #ff4081);
 }
 
 .uni-color-accent-fix {
@@ -41,6 +56,8 @@
 .uni-color-warn {
   color: #f44336;  /* Preferred color */
   color: var(--uni-color-warn, #f44336);
+  fill: #f44336;  /* Preferred color */
+  fill: var(--uni-color-warn, #f44336);
 }
 
 .uni-color-warn-fix {
