--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -1,4 +1,5 @@
 :root {
+  --uni-icon-size-default: 44px;
   --uni-icons-fa-brands-size: 44px;
   --uni-icons-fa-regular-size: 44px;
   --uni-icons-fa-solid-size: 44px;
