--- a/src/components/icons-mat/@wrap/icons-mat-wrap.css
+++ b/src/components/icons-mat/@wrap/icons-mat-wrap.css
@@ -1,3 +1,28 @@
+.uni-color-default-fix {
+  filter: invert(0%) sepia(92%) saturate(21%) hue-rotate(59deg) brightness(100%) contrast(100%);
+  filter: var(--uni-color-default-fix, invert(0%) sepia(92%) saturate(21%) hue-rotate(59deg) brightness(100%) contrast(100%));
+}
+
+.uni-color-primary-fix {
+  filter: invert(31%) sepia(10%) saturate(6644%) hue-rotate(204deg) brightness(95%) contrast(89%);
+  filter: var(--uni-color-primary-fix, invert(31%) sepia(10%) saturate(6644%) hue-rotate(204deg) brightness(95%) contrast(89%));
+}
+
+.uni-color-success-fix {
+  filter: invert(26%) sepia(88%) saturate(1958%) hue-rotate(160deg) brightness(94%) contrast(99%);
+  filter: var(--uni-color-success-fix, invert(26%) sepia(88%) saturate(1958%) hue-rotate(160deg) brightness(94%) contrast(99%));
+}
+
+.uni-color-accent-fix {
+  filter: invert(48%) sepia(88%) saturate(3768%) hue-rotate(315deg) brightness(99%) contrast(106%);
+  filter: var(--uni-color-accent-fix, invert(48%) sepia(88%) saturate(3768%) hue-rotate(315deg) brightness(99%) contrast(106%));
+}
+
+.uni-color-warn-fix {
+  filter: invert(42%) sepia(40%) saturate(3627%) hue-rotate(336deg) brightness(93%) contrast(107%);
+  filter: var(--uni-color-warn-fix, invert(42%) sepia(40%) saturate(3627%) hue-rotate(336deg) brightness(93%) contrast(107%));
+}
+
 .uni-icons-mat {
   font-weight: normal;
   font-style: normal;
