--- a/src/components/icons-fa/solid/styles/icons-fa-solid.css
+++ b/src/components/icons-fa/solid/styles/icons-fa-solid.css
@@ -7,12 +7,12 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url("assets/fonts/fa/fa-solid-900.eot");
-  src: url("assets/fonts/fa/fa-solid-900.eot?#iefix") format("embedded-opentype"),
-  url("assets/fonts/fa/fa-solid-900.woff2") format("woff2"),
-  url("assets/fonts/fa/fa-solid-900.woff") format("woff"),
-  url("assets/fonts/fa/fa-solid-900.ttf") format("truetype"),
-  url("assets/fonts/fa/fa-solid-900.svg#fontawesome") format("svg");
+  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/fa/fa-solid-900.eot);
+  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/fa/fa-solid-900.eot?#iefix) format("embedded-opentype"),
+  url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/fa/fa-solid-900.woff2) format("woff2"),
+  url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/fa/fa-solid-900.woff) format("woff"),
+  url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/fa/fa-solid-900.ttf) format("truetype"),
+  url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/fa/fa-solid-900.svg#fontawesome) format("svg");
 }
 
 .fa,
