--- a/src/components/icons-mat/filled/styles/icons-mat-filled.css
+++ b/src/components/icons-mat/filled/styles/icons-mat-filled.css
@@ -2,7 +2,7 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/mat/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2') format('woff2');
+  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/mat/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
 }
 
 .material-icons {
