--- a/src/components/icons-mat/sharp/styles/icons-mat-sharp.css
+++ b/src/components/icons-mat/sharp/styles/icons-mat-sharp.css
@@ -2,7 +2,7 @@
   font-family: 'Material Icons Sharp';
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialiconssharp/v27/oPWQ_lt5nv4pWNJpghLP75WiFR4kLh3kvmvR.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/mat/oPWQ_lt5nv4pWNJpghLP75WiFR4kLh3kvmvR.woff2) format('woff2');
 }
 
 .material-icons-sharp {
