--- a/src/components/icons-mat/two-tone/styles/icons-mat-two-tone.css
+++ b/src/components/icons-mat/two-tone/styles/icons-mat-two-tone.css
@@ -2,7 +2,7 @@
   font-family: 'Material Icons Two Tone';
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialiconstwotone/v25/hESh6WRmNCxEqUmNyh3JDeGxjVVyMg4tHGctNCu0.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/mat/hESh6WRmNCxEqUmNyh3JDeGxjVVyMg4tHGctNCu0.woff2) format('woff2');
 }
 
 .material-icons-two-tone {
