--- a/src/components/icons-fa/@wrap/icons-fa-wrap.css
+++ b/src/components/icons-fa/@wrap/icons-fa-wrap.css
@@ -11,7 +11,7 @@
   font-style: normal;
   font-variant: normal;
   font-size: 24px;  /* Preferred icon size */
-  font-size: var(--uni-icon-size-default, 24px);
+  font-size: var(--uni-size, 24px);
   line-height: 1;
   display: inline-block;
   text-rendering: auto;
