--- a/src/components/icons-fa/styles/icons-fa.css
+++ b/src/components/icons-fa/styles/icons-fa.css
@@ -10,7 +10,7 @@
 .fab {
   font-style: normal;
   font-variant: normal;
-  font-size: 24px;
+  font-size: 24px;  /* Preferred icon size */
   font-size: var(--uni-size, 24px);
   line-height: 1;
   display: inline-block;
