--- a/src/components/theme/@wrap/theme-wrap.css
+++ b/src/components/theme/@wrap/theme-wrap.css
@@ -1,10 +1,3 @@
-/*.uni-color {*/
-/*  color: #000;*/
-/*  color: var(--uni-color, #000);*/
-/*  fill: #000;*/
-/*  fill: var(--uni-color, #000);*/
-/*}*/
-
 .uni-color-primary {
   color: #3f51b5;
   color: var(--uni-color-primary, #3f51b5);
@@ -33,12 +26,25 @@
   fill: var(--uni-color-warn, #f44336);
 }
 
-/*.uni-size {*/
-/*  height: 24px;*/
-/*  height: var(--uni-size, 24px);*/
-/*  width: 24px;*/
-/*  width: var(--uni-size, 24px);*/
-/*}*/
+.uni-filter-primary {
+  filter: invert(31%) sepia(10%) saturate(6644%) hue-rotate(204deg) brightness(95%) contrast(89%);
+  filter: var(--uni-color-primary-fix, invert(31%) sepia(10%) saturate(6644%) hue-rotate(204deg) brightness(95%) contrast(89%));
+}
+
+.uni-filter-success {
+  filter: invert(26%) sepia(88%) saturate(1958%) hue-rotate(160deg) brightness(94%) contrast(99%);
+  filter: var(--uni-color-success-fix, invert(26%) sepia(88%) saturate(1958%) hue-rotate(160deg) brightness(94%) contrast(99%));
+}
+
+.uni-filter-accent {
+  filter: invert(48%) sepia(88%) saturate(3768%) hue-rotate(315deg) brightness(99%) contrast(106%);
+  filter: var(--uni-color-accent-fix, invert(48%) sepia(88%) saturate(3768%) hue-rotate(315deg) brightness(99%) contrast(106%));
+}
+
+.uni-filter-warn {
+  filter: invert(42%) sepia(40%) saturate(3627%) hue-rotate(336deg) brightness(93%) contrast(107%);
+  filter: var(--uni-color-warn-fix, invert(42%) sepia(40%) saturate(3627%) hue-rotate(336deg) brightness(93%) contrast(107%));
+}
 
 .uni-size-lg {
   height: 48px;
