refactor: icons mat

--- a/src/components/icons-mat/base/styles/icons-mat-base.css
+++ b/src/components/icons-mat/base/styles/icons-mat-base.css
@@ -1,16 +1,18 @@
 @font-face {
-  font-family: 'Material Icons Outlined';
+  font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/mat/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/mat/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
 }
 
-.material-icons-outlined {
-  font-family: 'Material Icons Outlined';
+.material-icons {
+  font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
+  color: #000;
+  color: var(--uni-color, #000);
   font-size: 24px;  /* Preferred icon size */
-  font-size: var(--uni-icon-size-default, 24px);
+  font-size: var(--uni-size, 24px);
   line-height: 1;
   letter-spacing: normal;
   text-transform: none;
