--- a/src/components/icons-fa/styles/icons-fa.css
+++ b/src/components/icons-fa/styles/icons-fa.css
@@ -10,8 +10,8 @@
 .fab {
   font-style: normal;
   font-variant: normal;
-  font-size: 24px;  /* Preferred icon size */
-  font-size: var(--uni-size, 24px);
+  color: #000;
+  font-size: 20px;
   line-height: 1;
   display: inline-block;
   text-rendering: auto;
