--- a/src/components/icons-mat/two-tone/styles/icons-mat-two-tone.css
+++ b/src/components/icons-mat/two-tone/styles/icons-mat-two-tone.css
@@ -9,8 +9,10 @@
   font-family: 'Material Icons Two Tone';
   font-weight: normal;
   font-style: normal;
+  color: #000;
+  color: var(--uni-color, #000);
   font-size: 24px;  /* Preferred icon size */
-  font-size: var(--uni-icon-size-default, 24px);
+  font-size: var(--uni-size, 24px);
   line-height: 1;
   letter-spacing: normal;
   text-transform: none;
