--- a/src/components/icons-mat/round/styles/icons-mat-round.css
+++ b/src/components/icons-mat/round/styles/icons-mat-round.css
@@ -2,14 +2,14 @@
   font-family: 'Material Icons Round';
   font-style: normal;
   font-weight: 400;
-  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/mat/LDItaoyNOAY6Uewc665JcIzCKsKc_M9flwmP.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.6/dist/icn/assets/fonts/mat/LDItaoyNOAY6Uewc665JcIzCKsKc_M9flwmP.woff2) format('woff2'),
+  url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.6/dist/icn/assets/fonts/mat/LDItaoyNOAY6Uewc665JcIzCKsKc_M9flwmJ.woff) format('woff')
 }
 
 .material-icons-round {
   font-family: 'Material Icons Round';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
   font-size: var(--uni-size, 24px);
   line-height: 1;
   letter-spacing: normal;
