--- a/src/components/icons-mat/two-tone/styles/icons-mat-two-tone.css
+++ b/src/components/icons-mat/two-tone/styles/icons-mat-two-tone.css
@@ -2,14 +2,14 @@
   font-family: 'Material Icons Two Tone';
   font-style: normal;
   font-weight: 400;
-  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.3/dist/icn/assets/fonts/mat/hESh6WRmNCxEqUmNyh3JDeGxjVVyMg4tHGctNCu0.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.6/dist/icn/assets/fonts/mat/hESh6WRmNCxEqUmNyh3JDeGxjVVyMg4tHGctNCu0.woff2) format('woff2'),
+  url(https://cdn.jsdelivr.net/npm/@uiwebkit/icn@0.0.6/dist/icn/assets/fonts/mat/hESh6WRmNCxEqUmNyh3JDeGxjVVyMg4tHGctNCuy.woff) format('woff');
 }
 
 .material-icons-two-tone {
   font-family: 'Material Icons Two Tone';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
   font-size: var(--uni-size, 24px);
   line-height: 1;
   letter-spacing: normal;
