--- a/src/components/icons-mat/outline/styles/icons-mat-outline.css
+++ b/src/components/icons-mat/outline/styles/icons-mat-outline.css
@@ -10,7 +10,7 @@
   font-family: 'Material Icons Outlined';
   font-weight: normal;
   font-style: normal;
-  font-size: var(--uni-size, 24px);
+  font-size: 24px;
   line-height: 1;
   letter-spacing: normal;
   text-transform: none;
