--- a/src/components/flag/styles/flag.css
+++ b/src/components/flag/styles/flag.css
@@ -1,4 +1,4 @@
 uni-flag svg {
-  width: 24px;
+  height: 18px;
   box-shadow: 0 6px 6px -3px rgba(0,0,0,.2), 0 10px 14px 1px rgba(0,0,0,.14), 0 4px 18px 3px rgba(0,0,0,.12);
 }
